--- a/static/stylesheets/scss/theme-variables.scss
+++ b/static/stylesheets/scss/theme-variables.scss
@@ -180,5 +180,10 @@ $data-sources-color: $brand-terciary;
 // Sankey Viz
 // --------------
 
+// old viz
+$sankey-budget-color:     mix( $gray-light, $gray-lighter, 40% );
+$sankey-execution-color:  mix( $brand-primary, white, 80% );                          // #1F77B4;
+
+// new viz
 $sankey-income-color: $brand-primary;
 $sankey-expense-color: complement($sankey-income-color);
