--- a/static/stylesheets/scss/theme.scss
+++ b/static/stylesheets/scss/theme.scss
@@ -3,3 +3,12 @@
 body{
   font-size: 12px;
 }
+
+.main-entity-logo{
+  margin: 20px 0;
+}
+
+.navbar-brand,
+.navbar-default .navbar-nav>li>a{
+  font-weight: 600;
+}
