--- a/static/stylesheets/scss/theme.scss
+++ b/static/stylesheets/scss/theme.scss
@@ -12,3 +12,23 @@ body{
 .navbar-default .navbar-nav>li>a{
   font-weight: 600;
 }
+
+.top-bar{
+  background: $brand-primary;
+  width: 100%;
+  height: 30px;
+
+  > a{
+    color: white;
+    margin-left: 15px;
+  }
+}
+
+#menu-lang{
+  float: right;
+  margin-right: 10px;
+}
+
+#menu-lang ul li input[type=submit]{
+  color: white;
+}
