Fix lang selector active

--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -12,7 +12,7 @@
           <form id="form_eu" method="get" action="/i18n/setlang/">
             <input type="hidden" name="next" value="/eu/">
             <input type="hidden" name="language" value="eu">
-            <input type="submit" value="{% if LANGUAGE_CODE == 'es' %}Euskera{% else %}Euskara{% endif %}" form="form_eu" class="{% if LANGUAGE_CODE == 'es' %}active{% endif %}">
+            <input type="submit" value="{% if LANGUAGE_CODE == 'es' %}Euskera{% else %}Euskara{% endif %}" form="form_eu" class="{% if LANGUAGE_CODE == 'eu' %}active{% endif %}">
           </form>
         </li>
         <li>
