Fix header logo link

--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -2,7 +2,7 @@
 
 <header>
 	<div class="top-bar">
-    <a href="{{ main_entity_web_url }}" title="Eibarko Udala"><img src="/static/assets/armarria.gif"></a>
+    <a href="{{ main_entity_web_url }}/{{ LANGUAGE_CODE }}/" title="Eibarko Udala"><img src="/static/assets/armarria.gif"></a>
 
 		<!-- Lang Selector: setup static items to allow language labels translations -->
 		{% if LANGUAGES|length > 1 %}
