Use https for all links and resources

--- a/templates/shared/footer.html
+++ b/templates/shared/footer.html
@@ -4,7 +4,7 @@
       <span>{{ _('Un proyecto de') }}</span>
       <a href="https://civio.es" class="link-civio" target="_blank">Civio</a>
       <span>&nbsp;{{ _('basado en el código de') }} </span>
-      <a href="http://opendata.aragon.es" class="link-aragon" target="_blank">Open Data Aragón </a>
+      <a href="https://opendata.aragon.es" class="link-aragon" target="_blank">Open Data Aragón </a>
     </p>
   </div>
   <div class="container">
